perform deployment by deploy/production.sh

--- a/circle.yml
+++ b/circle.yml
@@ -1,11 +1,10 @@
 machine:
     timezone: Asia/Tokyo
     python:
-        version: 2.7.10
+        version: 3.5.0
 dependencies:
     override:
         - pip install --upgrade 'tinkerer==1.5'
-        - pip install --upgrade 'fabric>=1.10.0,<1.11'
 test:
     override:
         - tinker -b
@@ -13,4 +12,4 @@ deployment:
     tinkerer:
         branch: blog
         commands:
-            - fab -f fabfile.py production deploy
+            - deploy/production.sh
