rename branch blog to master

--- a/circle.yml
+++ b/circle.yml
@@ -10,6 +10,6 @@ test:
         - tinker -b
 deployment:
     tinkerer:
-        branch: blog
+        branch: master
         commands:
             - deploy/production.sh
