--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,26 @@
 ---
 version: 2
-jobs:
-  build:
+defaults: &defaults
     docker:
       - image: circleci/python:3.6
+jobs:
+  build:
+    <<: *defaults
     steps:
-      - checkout
-
+      - checkout: {}
       - restore_cache:
-          key: build-{{ checksum ".circleci/config.yml" }}
+          key: build-{{ checksum "requirements.txt" }}
       - run: |
           if [ ! -d ".venv" ]; then
             python -m venv ./.venv
+            . ./.venv/bin/activate
+            pip install --upgrade pip
+            pip install -r requirements.txt
           fi
-          . ./.venv/bin/activate
-          pip install --upgrade pip
-          pip install --upgrade 'pelican>=3.7,<4.0' 'pelican-alias>=1.1,<2.0'
       - save_cache:
-          key: build-{{ checksum ".circleci/config.yml" }}
+          key: build-{{ checksum "requirements.txt" }}
           paths:
             - ".venv"
-
       - run: |
           . ./.venv/bin/activate
           make publish
@@ -29,16 +29,14 @@ jobs:
           paths:
             - output
   deploy:
-    docker:
-      - image: circleci/python:3.6
+    <<: *defaults
     steps:
-      - checkout
-      - add_ssh_keys
+      - checkout: {}
+      - add_ssh_keys: {}
       - run: |
           cat << EOF > ~/.ssh/known_hosts
           [s9.rs2plus.gehirn.ne.jp]:22341,[153.127.109.65]:22341 ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBGh08oN+BTakK+pFUgZPI9lj1mb8vSuNtl7RmTf/KUmoNYeI/y54HvNMHaWNuy4/Zco3zFctBkZIk4FxPFrVDR4=
           EOF
-
       - attach_workspace:
           at: .
       - run: |
@@ -51,7 +49,7 @@ workflows:
   version: 2
   deploy:
     jobs:
-      - build
+      - build: {}
       - deploy:
           requires:
             - build
